Corrected Css spacing through adding className

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,20 @@ body {
 
 }
 
+.ImagesSection {
+    margin-left: 40%;
+
+
+}
+
+.textLinkImgDiv {
+    
+    height: 60px;
+    display: block;
+    margin-left: 70%;
+
+}
+
 .textSection{
     margin-left: 10%;
     margin-top: 30px;
@@ -69,16 +83,54 @@ body {
     font-weight: lighter;
 
 }
+
+.none {
+    font-weight: lighter;
+
+}
 .first{
     font-size: 20px;
     margin-top:20px;
     margin-bottom:20px;
 }
 
-.ImagesSection {
+.textDict, ul {
+    display: inline-block;
+    padding-left: 0px;
+}
+
+.textListHeader {
+    font-weight: bold;
+}
+
+.textList {
+    font-weight: lighter;
+}
+
+.listSection {
+    margin-left: 10%;
+    margin-top: 30px;
+}
+.listHeader {
+    font-size: 35px;
+    font-weight: lighter;
+}
+
+.listTitle {
+    font-size: 16px;
+    font-weight: bold;
+    display: inline-block;
+    margin-right: 10px;
 
 }
-.Stack .textSecond {
+
+.listListItem{
+    font-weight: lighter;
+    display: inline-block;
+    margin-left: 5px;
+    margin-right: 10px;
+}
+/*.Stack .textSecond {
     margin: 5px;
     font-weight: bold;
     margin: 15px;
@@ -88,14 +140,33 @@ body {
 
 .Stack li {
     display: inline-block;
-    font-weight: normal;
+    font-weight: lighter;
     margin: 5px;
+}
+*/
+
+.About .textDict {
+    overflow:auto;
+    display: block;
+    float: left;
+    width: 30%;
+    margin-top: 0px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
+.About li {
+  /*  display: flex;*/
+}
+.About li {
+
+    font-size: 13px;
 }
 
 ul {
   list-style-type: none;
 }
 .linkMenu {
+    overflow:auto;
     display: block;
     width: 100%;
     padding: 0px;
@@ -147,3 +218,4 @@ ul {
     font-size: 12px;
     
 }
+
